.76 Refactor navigation menu

--- a/future.html
+++ b/future.html
@@ -31,26 +31,26 @@
     <LI><strike>Handle hits in both word lists</strike> (not needed)
     <LI>Capitalized and not
     </OL>
-  <LI>0.75 User-specific word lists
+  <LI>0.75 User-specific word lists (b>(all done)</b>
     <OL type=a>
-    <LI>Save result as list (done)
-    <LI>Move addmain to main folder (done)
-    <LI>Consolidate security checking (done)
-    <LI>Handle "more" feature (done)
-    <LI>Upload list (done)
-    <LI>corpus index on entry (done)
-    <LI>Access saved (done)
-    <LI>Menu (done)
-    <LI>Manage <b>(all done)</b>
+    <LI>Save result as list
+    <LI>Move addmain to main folder
+    <LI>Consolidate security checking
+    <LI>Handle "more" feature
+    <LI>Upload list
+    <LI>corpus index on entry
+    <LI>Access saved
+    <LI>Menu
+    <LI>Manage
 	<UL>
 	<LI>Delete
 	<LI>Rename
 	<LI>No left margin needed on subsidiary pages
 	<LI>Properties: URL
-	<LI>Properties: parent word list
+	<LI>Properties: parent word list 
 	<LI>Share
 	<LI>Delete words
-	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on shareand on deletion of shareds 
+	<LI><A HREF="https://www.w3schools.com/php/func_mail_mail.asp">E-mail sent</A> on share and on deletion of shareds 
 	<LI>Fix category lookup UI
 	<LI>Access shared
 	<LI>Fix issues with user lists 'like' Wiki* (categories, flags)
@@ -60,25 +60,27 @@
 	<LI>Sanitize inputs
 	<LI>Search page shows checks on both C and U, even if not both used
 	</UL>
-    <LI>List management help (done)
-    <LI>Review query help: update for categories & Wiktionary; remove Not Working (done)
-    <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest (done)
-    <LI>Separate CSS by $type (done)
-    <LI>Query may take too long (*yearwar at level 2) (done)
-    <LI>Retire preserveinfo (done)
-    <LI><font color=blue>Release</font>
-<!-- Release process
-* Tell everyone
--->
+    <LI>List management help
+    <LI>Review query help: update for categories & Wiktionary; remove Not Working
+    <LI>Limit to 5 for premium to 50K entries (2M characters), 20 for professional to 200K entries (20M characters); message about general interest
+    <LI>Separate CSS by $type
+    <LI>Query may take too long (*yearwar at level 2)
+    <LI>Retire preserveinfo
+    <LI>Release
     </OL>
   <LI>0.76 Other search capabilities
     <OL type=a>
-    <LI>Custom SQL with PW. (converted to lowercase)
+    <LI>Custom SQL with PW. (converted to lowercase) (done)
     <LI>Custom SQL: IJ or WHERE
+<!--
+Restore in form--weights has same issue
+Implement at run time
+-->
     <LI>Improve word lookup GUI
-    <LI>Enumeration (digit # | [may enter as ' and convert] - sp * ?)
+    <LI>Enumeration (digit # ' - sp * ?) [help]
     <LI>Hide corpus MORE in simple UI
-    <LI>Raw pattern/regex
+    <LI>Raw pattern/regex [help]
+    <LI>Number of incoming links
     </OL>
   </UL>
 <LI>0.8 Saving queries--see user types document for limits and features
