.76c Improve word lookup GUI

--- a/future.html
+++ b/future.html
@@ -68,16 +68,13 @@
     <LI>Retire preserveinfo
     <LI>Release
     </OL>
-  <LI>0.76 Other search capabilities
+  <LI>0.76 Other search capabilities <b>In progress</b>
     <OL type=a>
     <LI>Custom SQL with PW. (converted to lowercase) (done)
-    <LI>Custom SQL: IJ or WHERE
-<!--
-Restore in form--weights has same issue
-Implement at run time
--->
-    <LI>Improve word lookup GUI
-    <LI>Enumeration (digit # ' - sp * ?) [help]
+    <LI>Custom SQL: IJ or WHERE (done)
+    <LI>Improve word lookup GUI <!-- vup new stuff to beta -->
+    <LI><font color=red>Fix remove corpus constraint button fail</font> <!-- vup new stuff to beta; remove 'dev' from include utility in base -->
+    <LI><!-- Remove 'dev' from include utility in dev -->Enumeration (digit # ' - sp * ?) [help]
     <LI>Hide corpus MORE in simple UI
     <LI>Raw pattern/regex [help]
     <LI>Number of incoming links
