.76d Fix remove corpus constraint button fail

--- a/future.html
+++ b/future.html
@@ -66,18 +66,24 @@
     <LI>Separate CSS by $type
     <LI>Query may take too long (*yearwar at level 2)
     <LI>Retire preserveinfo
-    <LI>Release
     </OL>
   <LI>0.76 Other search capabilities <b>In progress</b>
     <OL type=a>
     <LI>Custom SQL with PW. (converted to lowercase) (done)
     <LI>Custom SQL: IJ or WHERE (done)
-    <LI>Improve word lookup GUI <!-- vup new stuff to beta -->
-    <LI><font color=red>Fix remove corpus constraint button fail</font> <!-- vup new stuff to beta; remove 'dev' from include utility in base -->
-    <LI><!-- Remove 'dev' from include utility in dev -->Enumeration (digit # ' - sp * ?) [help]
+    <LI>Improve word lookup GUI (done)
+    <LI>Fix remove corpus constraint button fail (done)
+    <LI>Enumeration (digit # ' - sp * ?) [help]
     <LI>Hide corpus MORE in simple UI
     <LI>Raw pattern/regex [help]
+    <LI>Use best 4-pattern
     <LI>Number of incoming links
+    <LI><font color=blue>Release</font>
+<!--
+Look for 'dev' references in beta after vup
+Future+1: vup new stuff to beta; remove 'dev' from include utility in base
+Future+2: Remove 'dev' from include utility in dev
+-->
     </OL>
   </UL>
 <LI>0.8 Saving queries--see user types document for limits and features
