--- a/helpdev.html
+++ b/helpdev.html
@@ -65,6 +65,14 @@ You can press the Wizard button to get a popup form to help you with this.
 The option allows you to specify a pattern of matching and nonmatching letters: a word which might be a solution in a
 cryptogram for the other word.  For example, ELLISVILLE would match REENGINEER and ABCABC would match words such as
 ATLATL, BONBON, and TSETSE.  Use * to specify that the word has no matching letters.;
+<H4>Enumeration</H4>
+This option allows you to specify a pattern of word lengths and punctuation.  A simple example would be <font face=Courier>5 4</font>, to represent a five-letter word
+followed by a four-letter word.  You can also use
+<B>#</B> to represent any digit (e.g., <font face=Courier>#### 3 3 4</font> would match <i>1776 and All That</i>),
+<B>'</B> and <B>-</B> (quote and hyphen) to represent themselves (<font face=Courier>6 2 '##</font> would match <i>Spirit of '76</i>),
+<B>*</B> to represent a word (sequence of letters) of any length (<font face=Courier>6 * 9</font> would match <i>Ludvig van Beethoven</i> or <i>George Albert Boulenger,</i>
+or <B>?</B> to represent any punctuation mark other than quote and hyphen.
+Note that all Unicode quote-like and hyphen-like characters are interpreted as ordinary quotes and hyphens here.
 <H3>Other Filters</H4>
 You can filter the final list of results with the minimum and maximum
 length boxes.
