--- a/future.html
+++ b/future.html
@@ -73,7 +73,7 @@
     <LI>Custom SQL: IJ or WHERE (done)
     <LI>Improve word lookup GUI (done)
     <LI>Fix remove corpus constraint button fail (done)
-    <LI>Enumeration (digit # ' - sp * ?) [help]
+    <LI>Enumeration (digit # ' - sp * ?) (done but for [help])
     <LI>Hide corpus MORE in simple UI
     <LI>Raw pattern/regex [help]
     <LI>Use best 4-pattern
