--- a/future.html
+++ b/future.html
@@ -74,10 +74,17 @@
     <LI>Improve word lookup GUI (done)
     <LI>Fix remove corpus constraint button fail (done)
     <LI>Enumeration (digit # ' - sp * ?) with [help] (done)
-    <LI>Hide corpus MORE in simple UI
+    <LI>Hide corpus MORE in simple UI (done)
     <LI>Raw pattern/regex [help]
+<!--
+Get regular to work
+Restore after query
+Reset/delete
+Get regex to work
+-->
     <LI>Use best 4-pattern
     <LI>Number of incoming links
+    <LI><font color=blue>Implement subresource integrity and local copies of libraries</font>
     <LI><font color=blue>Release</font>
 <!--
 Look for 'dev' references in beta after vup
