.76h Use best 4-pattern

--- a/future.html
+++ b/future.html
@@ -73,16 +73,11 @@
     <LI>Custom SQL: IJ or WHERE (done)
     <LI>Improve word lookup GUI (done)
     <LI>Fix remove corpus constraint button fail (done)
-    <LI>Enumeration (digit # ' - sp * ?) with [help] (done)
+    <LI>Enumeration (digit # ' - sp * ?) with help (done)
     <LI>Hide corpus MORE in simple UI (done)
-    <LI>Raw pattern/regex [help]
-<!--
-Get regular to work
-Restore after query
-Reset/delete
-Get regex to work
--->
-    <LI>Use best 4-pattern
+    <LI>Raw pattern/regex with help (done)
+    <LI>Use best 4-pattern (done)
+    <LI><font color=blue>Debug typeahead</font>
     <LI>Number of incoming links
     <LI><font color=blue>Implement subresource integrity and local copies of libraries</font>
     <LI><font color=blue>Release</font>
