.76j Number of incoming links

--- a/future.html
+++ b/future.html
@@ -76,9 +76,13 @@
     <LI>Enumeration (digit # ' - sp * ?) with help (done)
     <LI>Hide corpus MORE in simple UI (done)
     <LI>Raw pattern/regex with help (done)
-    <LI>Use best 4-pattern (done)
-    <LI><font color=blue>Debug typeahead</font>
+    <LI>Use best 4-pattern (done, but <font color=blue>test BETWEEN on xxx_ things</font>)
+    <LI><strike>Debug typeahead</strike>
     <LI>Number of incoming links
+<!--
+Handle continuations--need to use right URI parameters to avoid infinite loop
+Help
+-->
     <LI><font color=blue>Implement subresource integrity and local copies of libraries</font>
     <LI><font color=blue>Release</font>
 <!--
@@ -182,6 +186,8 @@ Future+2: Remove 'dev' from include utility in dev
 <LI>Validating corpus criteria
 <LI>Signon to display message based on code
 <LI>After timeout, error message sometimes appears stating that the SQL server has gone away
+<LI>Debug typeahead
+<LI>Force buttons and labels on the same line by modifying addRadio to bracket the two entities with a <span class=nobr>...</span> and use .nobr { white-space: nowrap } in CSS.  Although that may mess up the parent for deletion and require more changes.
 </LL>
 <H2>Ideas</H2>
 <LL>
