--- a/helpdev.html
+++ b/helpdev.html
@@ -89,8 +89,10 @@ In this case, queries may time out and display only partial results with a "more
 You can also search for categories in one of three ways: an exact match, the category and descendants (to five levels), or contains, which is
 normally the most useful.  Exact matches and contains are faster.  There is a lookup button which allows you to search for categories.
 It is currently a bit slow because it tries to give you more useful matches.
+<P>
+Finally, you can filter based on the number of incoming links.  This feature a useful proxy for finding well-known answers.  Links which are not in the main namespace count as only ⅓.
 <H4>Wikipedia</H5>
-The download is approaching the end, with 0, A-Hul, and M-Tek complete as of September 13.
+The download is approaching the end, with 0, A-Iso, and M-Th complete as of September 26.
 <H4>Wiktionary</H5>
 I have done only a very little bit of the download, enough to test the code.  By default, only English terms are searched;
 there is a checkbox to allow foreign words as well.  If you want a specific foreign language, you can search for categories
