.76h' use BETWEEN for three-letter groups

--- a/future.html
+++ b/future.html
@@ -78,11 +78,7 @@
     <LI>Raw pattern/regex with help (done)
     <LI>Use best 4-pattern (done, but <font color=blue>test BETWEEN on xxx_ things</font>)
     <LI><strike>Debug typeahead</strike>
-    <LI>Number of incoming links
-<!--
-Handle continuations--need to use right URI parameters to avoid infinite loop
-Help
--->
+    <LI>Number of incoming links (done)
     <LI><font color=blue>Implement subresource integrity and local copies of libraries</font>
     <LI><font color=blue>Release</font>
 <!--
