--- a/future.html
+++ b/future.html
@@ -76,10 +76,14 @@
     <LI>Enumeration (digit # ' - sp * ?) with help (done)
     <LI>Hide corpus MORE in simple UI (done)
     <LI>Raw pattern/regex with help (done)
-    <LI>Use best 4-pattern (done, but <font color=blue>test BETWEEN on xxx_ things</font>)
+    <LI>Use best 4-pattern and use BETWEEN on xxx_ things (done)
     <LI><strike>Debug typeahead</strike>
     <LI>Number of incoming links (done)
-    <LI><font color=blue>Implement subresource integrity and local copies of libraries</font>
+    <LI><font color=blue>Implement subresource integrity and local copies of libraries</font> (in progress)
+<!--
+//code.jquery.com/jquery-2.1.4.min.js
+//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'
+-->
     <LI><font color=blue>Release</font>
 <!--
 Look for 'dev' references in beta after vup
@@ -182,7 +186,7 @@ Future+2: Remove 'dev' from include utility in dev
 <LI>Validating corpus criteria
 <LI>Signon to display message based on code
 <LI>After timeout, error message sometimes appears stating that the SQL server has gone away
-<LI>Debug typeahead
+<LI>Debug typeahead; keep an eye on <A HREF="https://netsh.pp.ua/en/ask-a-question/">host's blog</A>.
 <LI>Force buttons and labels on the same line by modifying addRadio to bracket the two entities with a <span class=nobr>...</span> and use .nobr { white-space: nowrap } in CSS.  Although that may mess up the parent for deletion and require more changes.
 </LL>
 <H2>Ideas</H2>
@@ -215,7 +219,7 @@ Future+2: Remove 'dev' from include utility in dev
 <LI>Fix some early Wikitionary capitalization (see Alex*, for example)
 <LI>Fill in categories for first 5M on Wikipedia
 <LI>Get special characters for them too
-<LI><font color=blue>Modify addwikipedia to skip redirect from spelling error</font>
+<LI>Modify addwikipedia to skip redirect from spelling error.
 <LI>Delete "Redirect from spelling error" on Wikipedia
 </UL>
 </BODY>
