--- a/help.html
+++ b/help.html
@@ -5,33 +5,32 @@
 
 <BODY>
 <H2>Word Search Help <span class='specs'>0.61</span></H2>
-<H3>Working</H3>
-<H4>Main Pattern</H4>
-Enter a pattern in the "Basic Pattern" field and press Submit.  You can 
-use "standard" wildcards, * or ?.  For example, F* to find all words 
+<H3>Main Pattern</H4>
+Enter a pattern in the "Basic Pattern" field and press Submit.  You can
+use "standard" wildcards, * or ?.  For example, F* to find all words
 starting with F or ??F* to find all words with the third letter F.  You can specify groups of letters with brackets;
 for example, [AHIMOTUVWX] for letters with mirror symmetry or [a-m] for letters in the first half of the alphabet.  The special character
 @ can be used for any consonant, # for any vowel, or & for any standard Roman numeral.
 <P>
-If you check the "any order" box, it will find words with the letters 
+If you check the "any order" box, it will find words with the letters
 in any order.  For example, BE* will find any words containing both B and E.  Only one set of brackets can be used when this box is checked.  You can also use the "Repeat letters checkbox" to allow the specified letters to be repeated one or more times.  For example, EHORS with both boxes checked would give results including HEROES, HORSE, HORSES, HORSESHOE, and SHORE.
-<H4>Additional Constraints</H4>
-<H5>Regular Expression</H5>
+<H3>Additional Constraints</H4>
+<H4>Regular Expression</H5>
 You can search for the intersection of those results with any
-<A HREF="http://regexone.com/lesson/introduction_abcs">regular 
+<A HREF="http://regexone.com/lesson/introduction_abcs">regular
 expression</A>.
-For example, if you enter B* for the basic pattern, then press the #Add 
-Constraint# button and enter f[aeiou]+f and select Regular Expression, you'll 
-get all words starting with B and containing two F's separated by one or more vowels.  If you check the 
-Not box at the beginning of the line, it will allow only words which do 
+For example, if you enter B* for the basic pattern, then press the #Add
+Constraint# button and enter f[aeiou]+f and select Regular Expression, you'll
+get all words starting with B and containing two F's separated by one or more vowels.  If you check the
+Not box at the beginning of the line, it will allow only words which do
 not meet the criterion.  For example, if you check the box and use a
 pattern of *E*, it will find only words with no letter E.  (You can also
 do this with a regex of ^[a-df-z]*$.)
-<H5>Pattern</H5>
-You can also intersect with another pattern, using the same syntax as in 
+<H4>Pattern</H5>
+You can also intersect with another pattern, using the same syntax as in
 the basic pattern field.
-<H5>Subword</H5>
-You can filter by a subword or secondary word.  Enter a series of 
+<H4>Subword</H5>
+You can filter by a subword or secondary word.  Enter a series of
 specifications of the following forms:
 <UL>
   <LI>a number, to represent the letter in that position
@@ -41,9 +40,9 @@ specifications of the following forms:
 	ninth letters in reverse<BR>
   <LI>or a letter, representing itself
 </UL>
-Separate numbers by commas.  For example, if the main word is 
+Separate numbers by commas.  For example, if the main word is
 BOLSTERED, 4,2L-1:-3 would be SOLDER and would match.
-<H5>Weights</H5>
+<H4>Weights</H5>
 This option will look at the weight of each letter, which can either be its value in Scrabble&reg; (e.g., H=4) or its position
 in the alphabet (e.g., H=8), possibly with a multiplier, added up over the whole word.  If the search field is left blank,
 a multiplier of 1 will be used for each letter.  If a series of digits is entered (e.g., 3112), the multipliers will be
@@ -55,31 +54,42 @@ will be 112: 5 + 2x24 + 1 + 13 + 16 + 2x12 + 5.  After this specification, put e
 +>50 will give all words with total weight greater than 50.
 <P>
 You can press the Wizard button to get a popup form to help you with this.
-<H5>Letter Matches</H5>
+<H4>Letter Matches</H5>
 The option allows you to specify that certain characters within the word must match or have another relationship.
 The simplest case is something like 3=8, which means that the third and eighth letters are the same.  A more complicated
 example is 3>-3+^5 which says that the third letter has to be more than five places later in the alphabet (+^5) than the
 third letter from the end (-3).;
 <P>
 You can press the Wizard button to get a popup form to help you with this.
-<H5>Cryptogram</H5>
+<H4>Cryptogram</H5>
 The option allows you to specify a pattern of matching and nonmatching letters: a word which might be a solution in a
 cryptogram for the other word.  For example, ELLISVILLE would match REENGINEER and ABCABC would match words such as
 ATLATL, BONBON, and TSETSE.  Use * to specify that the word has no matching letters.;
-<H4>Other Filters</H4>
-You can filter the final list of results with the minimum and maximum 
+<H3>Other Filters</H4>
+You can filter the final list of results with the minimum and maximum
 length boxes.
-<H4>Source</H4>
-Wikipedia is currently the only functioning source.  The download is incomplete, about four million terms available out of maybe thirty million.  By default, redirects are not searched; most of these have little logological interest.
+<H3>Source</H4>
+You can choose among Wikipedia, Wiktionary, and any user-defined word lists to which you have access.  For both,
+by default, redirects are not searched; most of these have little logological interest.
+You can search the content of the pages of matching entries (but not currently of redirects),
+either for an ordinary pattern or a regular expression, just as for the original string.
+For example, you can search for articles that match "*germany*" but the content does not match either "east" or "west".
+You can also search by the size of the page.  Note that this feature may be slow, as the page content must be retrieved over the internet.
+In this case, queries may time out and display only partial results with a "more" link.
 <P>
-You can search the content of the Wikipedia pages of matching entries (but not currently of redirects), either for an ordinary pattern or a regular expression, just as for the original string.  For example, you can search for articles that match "*germany*" but the content does not match either "east" or "west".  You can also search by the size of the page.  Note that this feature may be slow, as the page content must be retrieved over the internet.  In this case, queries may time out and display only partial results with a "more" link.
+You can also search for categories in one of three ways: an exact match, the category and descendants (to five levels), or contains, which is
+normally the most useful.  Exact matches and contains are faster.  There is a lookup button which allows you to search for categories.
+It is currently a bit slow because it tries to give you more useful matches.
+<H4>Wikipedia</H5>
+The download is approaching the end, with 0, A-Hul, and M-Tek complete as of September 13.
+<H4>Wiktionary</H5>
+I have done only a very little bit of the download, enough to test the code.  By default, only English terms are searched;
+there is a checkbox to allow foreign words as well.  If you want a specific foreign language, you can search for categories
+beginning with the language name.
 <P>
-Upcoming capability will allow search by categories.
+There are also checkboxes to filter to capitalized or uncapitalized entries.  (Wikipedia does not make this distinction.)
 <H3>Versions</H3>
-The main page should be stable and functional.  There are links to go to 
+The main page should be stable and functional.  There are links to go to
 the previous version and the beta version.
-<div class='disabled'>
-<H3>Not Working</H3>
-</div>
 <P>
 </BODY>
