.82a fix issue with redirects

--- a/future.html
+++ b/future.html
@@ -49,7 +49,7 @@
 <LI>0.8 Saving queries--see user types document for limits and features
   <UL>
   <LI>0.81 Save query (done)
-  <LI>0.82 Recall query
+  <LI>0.82 Recall query (done)
   <LI><font color=red>*brownscho* is showing redirects</font>
   <LI>0.83 Delete query
   <LI><font color=red>Validate needs expansion when raw checked</font>
@@ -68,6 +68,7 @@ SELECT distinct entry.name AS entry FROM words PW INNER JOIN word_entry ON word_
   <LI>0.85 Access shared query
   <LI>Move Save Query to sidebar
   <LI>0.86 Rename query
+  <LI>Try to switch to https://cdnjs.com/libraries/jquery-typeahead
   <LI><font color=blue>Release</font>
 <!--
 Look for 'dev' references in beta after vup
@@ -158,11 +159,11 @@ Future+1: Remove 'dev' from include utility in dev
 <LI>Multiple out-of-order constraint deletions followed by an insert
 <LI>Required fields in wizard
 <LI>Text search on disambiguation pages
+<LI>Text search on redirect pages
 <LI>Validating corpus criteria
 <LI>Signon to display message based on code
 <LI>After timeout, error message sometimes appears stating that the SQL server has gone away
 <LI>Find a way to avoid 500 errors
-<LI>Debug typeahead; keep an eye on <A HREF="https://netsh.pp.ua/en/ask-a-question/">host's blog</A>.
 <LI>Force buttons and labels on the same line by modifying addRadio to bracket the two entities with a <span class=nobr>...</span> and use .nobr { white-space: nowrap } in CSS.  Although that may mess up the parent for deletion and require more changes.
 </LL>
 <H2>Ideas</H2>
