--- a/future.html
+++ b/future.html
@@ -50,7 +50,7 @@
   <UL>
   <LI>0.81 Save query (done)
   <LI>0.82 Recall query (done)
-  <LI><font color=red>*brownscho* is showing redirects</font>
+  <LI>*brownscho* is showing redirects (done)
   <LI>0.83 Delete query
   <LI><font color=red>Validate needs expansion when raw checked</font>
   <LI>0.84 Share query
