.83a Validate needs expansion when raw checked

--- a/future.html
+++ b/future.html
@@ -51,7 +51,7 @@
   <LI>0.81 Save query (done)
   <LI>0.82 Recall query (done)
   <LI>*brownscho* is showing redirects (done)
-  <LI>0.83 Delete query
+  <LI>0.83 Delete query (done)
   <LI><font color=red>Validate needs expansion when raw checked</font>
   <LI>0.84 Share query
   <LI><font color=red>SQL issues</font>
