--- a/future.html
+++ b/future.html
@@ -52,19 +52,16 @@
   <LI>0.82 Recall query (done)
   <LI>*brownscho* is showing redirects (done)
   <LI>0.83 Delete query (done)
-  <LI><font color=red>Validate needs expansion when raw checked</font>
-  <LI>0.84 Share query
+  <LI>Validate needs expansion when raw checked (done)
+  <LI>0.84 Share query (done)
   <LI><font color=red>SQL issues</font>
-  <UL>
-    <LI>Look into why *bombing* dies
-<!--
- SELECT PW.text AS word, Min(entry.name) AS entry, entry.id as entry_id, word_entry.whole AS whole, entry.corpus_id AS corpus FROM words PW INNER JOIN word_entry ON word_entry.word_id = PW.id INNER JOIN entry ON entry.id = word_entry.entry_id LEFT OUTER JOIN word_entry WE90 ON WE90.word_id = PW.id LEFT OUTER JOIN entry ECP90 ON ECP90.id = WE90.entry_id AND ECP90.corpus_id = 2 INNER JOIN word_four WF ON WF.word_id = word_entry.word_id AND WF.quartet = 'bomb' /* premain */ WHERE 1=1 AND PW.text LIKE '%bombing%' AND PW.text BETWEEN '' AND 'zzz' AND ( ((PW.bank LIKE 'b%g%i%mno%' OR PW.bank LIKE 'ab%g%i%mno%') AND PW.text LIKE '%b%b%') ) AND entry.corpus_id IN (2,3,90,91) AND (entry.corpus_id <> 91 OR entry.flags NOT RLIKE '[R]' ) AND (entry.corpus_id <> 91 OR entry.flags NOT RLIKE '[RF]' ) AND (entry.corpus_id <> 91 OR entry.flags NOT RLIKE '[R]' ) AND PW.length >= 7 GROUP BY PW.text, word_entry.whole , entry.corpus_id ORDER BY PW.text, word_entry.whole DESC, entry.corpus_id
-
-SELECT distinct entry.name AS entry FROM words PW INNER JOIN word_entry ON word_entry.word_id = PW.id INNER JOIN entry ON entry.id = word_entry.entry_id INNER JOIN word_four WF ON WF.word_id = word_entry.word_id AND WF.quartet = 'bomb' /* premain */ WHERE PW.text LIKE '%bombing%' order by entry.name
--->
+  <OL type=a>
+    <LI>Look into why *bombing* dies (done)
     <LI>Similarly, SVs starting with James
-    <LI>don't include AND PW.text BETWEEN '' AND 'zzz'
-  </UL>
+    <LI>Once that's fixed, support categories on LIKE corpora again
+    <LI>Support C and U on LIKE corpora as well
+    <LI>don't include AND PW.text BETWEEN '' AND 'zzz' (done)
+  </OL>
   <LI>0.85 Access shared query
   <LI>Move Save Query to sidebar
   <LI>0.86 Rename query
@@ -78,13 +75,17 @@ Future+1: Remove 'dev' from include utility in dev
   </UL>
 <LI>0.9 Output options
   <UL>
-  <LI>0.90 Links to <A HREF="www.quinapalus.com/cgi-bin/qat">Qat</A>,
-	<A HREF="https://tools.qhex.org/">Qhex</A>,
-	<A HREF="https://nutrimatic.org/">Nutrimatic</A>,
-  	and <A HREF="http://wordsmith.org/anagram/index.html">IAS</A>
+  <LI>0.90 Links to
+  <OL type=a>
+    <LI><A HREF="www.quinapalus.com/cgi-bin/qat">Qat</A>
+    <LI><A HREF="https://tools.qhex.org/">Qhex</A>
+    <LI><A HREF="https://nutrimatic.org/">Nutrimatic</A>
+    <LI><A HREF="http://wordsmith.org/anagram/index.html">IAS</A>
+    <LI>Ask dimitri
+  </OL>
   <LI>0.91 Show letters in anagram/bank order
   <LI>0.92 Links
-    <UL>
+    <LI>
     <LI>suppress
     <LI>source
     <LI>Google
@@ -139,6 +140,7 @@ Future+1: Remove 'dev' from include utility in dev
 	<LI>Forgot password
 	<LI>EULA
 	<LI>robot detection
+	<LI>E-mail on shares/unshares
   </UL>
   <LI>1.07 Web 2.0
   <UL>
