.85 access shared query

--- a/future.html
+++ b/future.html
@@ -62,8 +62,9 @@
     <LI>Support C and U on LIKE corpora as well
     <LI>don't include AND PW.text BETWEEN '' AND 'zzz' (done)
   </OL>
-  <LI>0.85 Access shared query
+  <LI>0.85 Access shared query (done)
   <LI>Move Save Query to sidebar
+  <LI>See above
   <LI>0.86 Rename query
   <LI>Try to switch to https://cdnjs.com/libraries/jquery-typeahead
   <LI><font color=blue>Release</font>
