.85a move Save Results to sidebar

--- a/future.html
+++ b/future.html
@@ -57,13 +57,13 @@
   <LI><font color=red>SQL issues</font>
   <OL type=a>
     <LI>Look into why *bombing* dies (done)
-    <LI>Similarly, SVs starting with James
+    <LI>Similarly, SVs starting with James (same)
     <LI>Once that's fixed, support categories on LIKE corpora again
     <LI>Support C and U on LIKE corpora as well
     <LI>don't include AND PW.text BETWEEN '' AND 'zzz' (done)
   </OL>
   <LI>0.85 Access shared query (done)
-  <LI>Move Save Query to sidebar
+  <LI>Move Save Query to sidebar (done)
   <LI>See above
   <LI>0.86 Rename query
   <LI>Try to switch to https://cdnjs.com/libraries/jquery-typeahead
