--- a/future.html
+++ b/future.html
@@ -58,9 +58,10 @@
   <OL type=a>
     <LI>Look into why *bombing* dies (done)
     <LI>Similarly, SVs starting with James (same)
-    <LI>Once that's fixed, support categories on LIKE corpora again
+    <LI>Once that's fixed, support categories on LIKE corpora again (done)
     <LI>Support C and U on LIKE corpora as well
     <LI>don't include AND PW.text BETWEEN '' AND 'zzz' (done)
+    <LI>Don't add fours & pairs unless they help
   </OL>
   <LI>0.85 Access shared query (done)
   <LI>Move Save Query to sidebar (done)
