.84'd support C and U on LIKE corpora

--- a/future.html
+++ b/future.html
@@ -59,7 +59,7 @@
     <LI>Look into why *bombing* dies (done)
     <LI>Similarly, SVs starting with James (same)
     <LI>Once that's fixed, support categories on LIKE corpora again (done)
-    <LI>Support C and U on LIKE corpora as well
+    <LI>Support C and U on LIKE corpora as well (done)
     <LI>don't include AND PW.text BETWEEN '' AND 'zzz' (done)
     <LI>Don't add fours & pairs unless they help
   </OL>
